--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,18 @@
 @use "pages/contact";
 @use "utils/helpers";
 @use "vendors/bootstrap";
+@use "abstracts/functions";
+@use "abstracts/mixins";
+@use "abstracts/variables";
+@use "base/reset";
+@use "base/typography";
+@use "base/utilities";
+@use "base/base";
+@use "components/buttons";
+@use "layout/header";
+@use "layout/footer";
+@use "layout/sidebar";
+@use "pages/home";
+@use "pages/contact";
+@use "utils/helpers";
+@use "vendors/bootstrap";
